test/functions/jplevyak/intent-8-error.good
intent-8-error.chpl:8: error: const actual is passed to 'out' formal 'x' of foo()
